# expanse

./: .clang-format  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  run_test.sh
cmake/: BuildInfo.cmake  Coverage.cmake  CppCheck.cmake  Format.cmake  Memcheck.cmake  NoInSourceBuilds.cmake  SharedTargets.cmake  StaticCheckers.cmake  Testing.cmake  build_info.cmake  buildinfo.h.in
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  ecs.cpp  ecs.hpp  engine.cpp  engine.hpp
src/engine/ecs/: component_container.hpp  component_manager.hpp  component_storage.hpp  entity_manager.hpp  system_manager.cpp  system_manager.hpp  types.hpp  view.hpp  view_manager.hpp
src/engine/engine/: ecs.hpp  engine.cpp  engine.hpp
src/engine/engine/ecs/: component_container.hpp  component_storage.hpp  types.hpp
src/world/: CMakeLists.txt  world.cpp
src/world/components/: movement.hpp
src/world/systems/: movement.cpp  movement.hpp
src/world/world/: world.cpp  world.hpp
src/world/world/systems/: movement.cpp  movement.hpp
test/: CMakeLists.txt
test/engine/: CMakeLists.txt
test/world/: CMakeLists.txt
